--- a/src/containers/skills/Skills.scss
+++ b/src/containers/skills/Skills.scss
@@ -4,6 +4,7 @@
   display: flex;
   width: 100%;
   overflow: hidden;
+  margin-top: -40px;
 }
 
 .skills-text-div {
@@ -13,6 +14,10 @@
 .skills-main-div > * {
   flex: 1;
   margin-bottom: 30px;
+}
+
+.skills-image-div {
+  max-height: 600px;
 }
 
 .skills-image-div > img {
