--- a/src/containers/workExperience/WorkExperience.scss
+++ b/src/containers/workExperience/WorkExperience.scss
@@ -7,6 +7,7 @@
 .experience-heading {
   font-size: 56px;
   font-weight: 400;
+  margin-top: -40px;
 }
 
 .experience-container {
